[package]
name = "auto_tx"
version = "1.0.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cita_cloud_proto = "=6.7.2"
cloud-util = "=0.8.0"
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", tag = "v1.0.0", default-features = false, features = [
    "restful",
    "consul",
    "config",
] }

bincode = "1.3"
cita-tool = "0.21"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
ethabi = "18.0"
hex = "0.4"
md5 = "0.7"
once_cell = "1.19"
opendal = { version = "0.44", features = ["services-sled"] }
paste = "1.0"
prost = "0.12"
reqwest = { version = "0.11", features = ["json"] }
salvo = { version = "0.63", features = ["affix"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
web3 = { git = "https://github.com/cita-cloud-cache/rust-web3", tag = "v1.0.0" }

[profile.release.package."*"]
debug = 0

[profile.release]
debug = 1

[profile.dev.package.backtrace]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
