[package]
name = "auto_tx"
version = "1.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", default-features = false, features = [
    "restful",
    "redis",
    "config",
    "log",
] }
web3 = { git = "https://github.com/cita-cloud-cache/rust-web3" }

cita-tool = "0.21"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
ethabi = "18.0"
hex = "0.4"
uhlc = "0.8"
md5 = "0.7"
once_cell = "1.19"
paste = "1.0"
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"

[profile.release.package."*"]
debug = 0

[profile.release]
debug = 1

[profile.dev.package.backtrace]
opt-level = 3

[lints.rust]
missing_copy_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
